# clipman2

./: CMakeLists.txt  README.md  clipman2.c
